--- a/public/scss/classroom.scss
+++ b/public/scss/classroom.scss
@@ -128,8 +128,8 @@
           top: 12px;
         }
         img {
-          width: 27px;
-          margin-top: 3px;
+          width: 26px;
+          margin-top: 4px;
         }
       }
       .message2 {
@@ -172,8 +172,8 @@
           top: 12px;
         }
         img {
-          margin-top: 3px;
-          width: 27px;
+          margin-top: 4px;
+          width: 26px;
           float: right;
           clear: both;
         }
